[tool.poetry]
name = "aaa-repo"
version = "0.1.0"
description = ""
authors = ["AdelheidVC <adelheidvc@freedom.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.6"}
scons = "^4.8.1"
black = "^24.10.0"
ruff = "^0.8.4"
pylint = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
